--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -1,5 +1,5 @@
 /**
-    Document   : forms
+    Document   : base
     Created on : August 04, 2016, 13:40
     Author     : Kom Sihon
     Description:
@@ -11,8 +11,8 @@
 body {color: #545454}
 .working {cursor: wait}
 .success {background: #B6F1B6; border: 1px solid; border-radius: 3px; color: #039B03}
-.msg-tag.info {background: #dde9f1; border: 1px solid; border-radius: 3px; color: #1d2e9b}
-.failure, .msg-tag.error {background: #FFB6C1; border: 1px solid; border-radius: 3px; color:  #F00}
+.msg-tag.info {background: #dde9f1;border: 1px solid;border-radius: 3px;color: #1d2e9b}
+.failure, .floating-notice.error, .msg-tag.error {background: #FFB6C1; border: 1px solid; border-radius: 3px; color:  #F00}
 .clear {clear: both}
 .text-muted {color: #888}
 .help {color: #888; font-size: 14px}
@@ -73,16 +73,18 @@ body {color: #545454}
 .status-bullet.danger, .status-bullet.canceled, .status-bullet.rejected {background: #ee4032}
 
 .member, .ik-li {border-bottom: 1px solid #eee;display: block;float: left;padding: 10px;width: 100%;transition: border .1s;}
+.ik-li.clearfix {border-bottom: none}
 .member:hover, .ik-li:hover {background: #f8f8f8}
-.member.active, .ik-li.active {background: #f6f6f6}
+.member.active, .ik-li.active {background: #f8f6f6;}
 .member .photo, .ik-li .image {background: no-repeat center;background-size: 100% auto;float: left;height: 60px;width: 60px;}
 .member .photo, .ik-li .image.rounded {border-radius: 30px; overflow: hidden}
-.member .info, .ik-li .info {float: left;margin-left: 10px;max-width: 225px;width: auto}
+.member .info, .ik-li .info {float: left;margin-left: 10px;max-width: 225px;width: auto;}
 .member .full_name, .ik-li .name, .ik-li .title {cursor: pointer;color: #333;font-size: 15px;padding: 5px 0 0;}
 .member .about, .ik-li .about {color: #888;font-size: 13px;}
 .ik-li .select {background: #fff;color:#9433ff; border-radius: 10px;display: none; height: 20px;position: absolute;width: 20px;margin: -20px 0 0 -10px;}
 .ik-li .select .glyphicon {margin: 2px}
 .ik-li.selected .select {background: #9433ff; color: #fff; display: block}
+.ik-li .date {font-size: 11px}
 
 .ik-li .actions .glyphicon, #selection-control .glyphicon {
     box-sizing: content-box;
@@ -197,7 +199,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 }
 
 @media (max-width: 767px) {
-    .modal .actions .action {margin-top: .6em}
+    .modal .actions .action, .modal .actions .btn {margin-top: .6em}
     .ik-li.img-lg {padding: 8px 6px}
     .ik-li.img-lg .image {height: 100px; width: 130px;}
     .ik-li.img-lg .info {margin-left: 10px;width: 160px;}
@@ -218,6 +220,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
         color: #555
     }
     .bottom-shade-xs {box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .1)}
+    .ik-li .date {position: absolute; margin-left: -63px}
 }
 @media (min-width: 768px) {
     .modal .actions {margin-top: 2em}
@@ -268,6 +271,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
     .edge-panel-right {display: block;margin-right: 0;z-index: 20;}
     .tiles .ik-li {height: 280px;width: 33.33%;}
     .nav > .tab > a {padding: 10px 15px}
+    .ik-li .date {float: right}
 }
 @media (min-width: 992px) {
     .tiles {margin-left: -15px}
@@ -310,3 +314,11 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 footer {color: #999;font-size: 12px;text-align: center;margin-top: 30px;}
 .edge-panel-left footer {margin-top: 0}
 footer a {color: #999}
+
+.item-preview {background: #f6f6f6;border-radius: 5px;overflow: hidden;margin-top: 5px;}
+.item-preview .img {background: no-repeat center;background-size: cover;float: left;height: 100px;width: 100px;}
+.item-preview .name {float: left;font-size: 18px;margin: 10px 10px 0;}
+.item-preview .about {clear: both; float: left; margin: 10px 10px 0}
+.autocomplete-suggestions {background: #fff; box-shadow: 1px 1px 9px 4px rgba(0, 0, 0, .1)}
+.autocomplete-suggestion {cursor: pointer; padding: 10px;}
+.autocomplete-suggestion:not(:first-child) {border-top: 1px solid #ddd}
