--- a/core/templates/core/configuration.html
+++ b/core/templates/core/configuration.html
@@ -85,7 +85,7 @@
             $('div#admin-nav .configuration').addClass('active');
             $('.currencies-config').insertAfter('.website h3').show();
             $('.form-row').addClass('form-group');
-            $('.form-row input:not([type=file]), .form-row select, .form-row textarea').addClass('form-control input-sm');
+            $('.form-row input:not([type=file], [type=checkbox]), .form-row select, .form-row textarea').addClass('form-control input-sm');
             $('.form-row textarea').addClass('form-control input-sm');
             {% if messages %}
                 {% for msg in messages %}ikwen.showFloatingNotice('{{ msg }}', '', 6);{% endfor %}
