--- a/billing/templates/billing/momo_checkout.html
+++ b/billing/templates/billing/momo_checkout.html
@@ -13,7 +13,7 @@
         <div id="checkout">
             <div style="margin-bottom: 45px">
                 <span class="pull-left" style="width: 50%">
-                    <img src="{{ settings.IKWEN_MEDIA_URL }}{{ payment_mean.logo.name }}" alt="{{ payment_mean.name }}" class="img-responsive" />
+                    <img src="{{ settings.IKWEN_MEDIA_URL }}{{ payment_mean.logo.name }}" alt="{{ payment_mean.name }}" class="img-responsive" style="height: 45px" />
                 </span>
                 <span class="pull-right" style="color: #03A9F4">
                     <i class="glyphicon glyphicon-shopping-cart" style="color: #3F51B5; font-size: 21px; margin-right: 5px"></i>
