--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -6,7 +6,7 @@
         Additional basic display rules for Ikwen apps
 */
 
-@import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700');
+@import url('https://fonts.googleapis.com/css?family=Lato:300|PT+Sans:400,700');
 
 body {color: #545454}
 .working {cursor: wait}
@@ -126,7 +126,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 .bottom-shade {box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .1)}
 .text-has-shade {text-shadow: 1px 2px 2px rgba(0, 0, 0, .7)}
 .inner-shade {box-shadow: inset 0 1px 3px rgba(0, 0, 0, .15);}
-.subtle-shade {box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .15);}
+.subtle-shade {box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .15);}
 #navbar {height: 55px;min-height: 50px;position: fixed;width: 100%;}
 .menu-button {float: left;padding: 20px 10px 0 10px;display: none;}
 .icon-bar {
