--- a/accesscontrol/templates/accesscontrol/sign_in.html
+++ b/accesscontrol/templates/accesscontrol/sign_in.html
@@ -7,6 +7,7 @@
     <style  type="text/css">
         #navbar .search, #navbar .navbar-right {display: none}
         label span {font-weight: normal}
+        #lg-username {text-transform: lowercase}
         #terms-warning {color: #999; font-size: 11px}
         .login-with-ikwen {font-size: 1em; letter-spacing: .5px; padding: 6px 9px 8px}
         .login-with-ikwen strong {color: #7ea6ca}
@@ -70,59 +71,15 @@
     <script type="text/javascript">
         {% get_current_language as LANGUAGE_CODE %}
         (function() {
-             {% if request.GET.action or register_form %}
-                $('#rg-username').blur(function() {
-                    var username = $(this).val(),
-                        $formGroup = $('.form-group.email'),
-                        $email =  $('#rg-email');
-                    if (username.isValidEmail()) {
-                        $email.removeClass('required').val(username);
-                        $formGroup.css('overflow', 'hidden').animate({height: 0, marginBottom: 0});
-                        return;
-                    }
-                    $email.addClass('required').val('');
-                    $formGroup.animate({height: '35px', marginBottom: '15px'}, 'normal', 'linear', function() {
-                        $formGroup.css('overflow', 'unset')
-                    })
-                }).focus();
-                $('#rg-email').blur(testEmail);
-                $('#rg-phone').blur(function() {
-                    var phone = $(this).val();
-                    if (phone && !/\d+/.test(phone)) {
-                        $('<ul class="errorlist"><li>' + "{% trans "Please use digits only and prepend country code." %}" + '</li><ul>')
-                            .insertAfter('#rg-phone');
-                    } else {
-                        $('.form-group.phone .errorlist').hide();
-                    }
-                });
-                function testEmail() {
-                    var $email = $('#rg-email');
-                    if ($email.val().isValidEmail()) {
-                        $('.errorlist.email').remove();
-                        return true;
-                    }
-                    $('.form-group.email .errorlist').remove();
-                    $('<ul class="errorlist email"><li>' + "{% trans "Please, enter valid email" %}" + '</li><ul>')
-                            .insertAfter('#rg-email');
-                    $email.focus();
-                    return false;
+            $('#lg-username').keyup(function(e) {
+                if (e.key === ' ') {
+                    var username = $(this).val().trim();
+                    $(this).val(username);
                 }
-                $('div#register form').submit(function() {
-                    if ($('#rg-email').hasClass('required')) return testEmail()
-                });
-            {% endif %}
-{#            var p = $('form#register .country-code').width() + 3,#}
-{#                w = $('form#register .phone').width() - p + 5;#}
-{#            $('form#register .phone').css({paddingLeft: p, width: w});#}
-{#            $('form#register').submit(function() {#}
-{#                var phone = $(this).find('.phone').val();#}
-{#                if (!/\d{9,}/.test(phone)) {#}
-{#                    $('div#top-notice-ctnr span').html({% trans "Invalid phone number. Use digits only." %}).addClass('failure');#}
-{#                    $('#top-notice-ctnr').fadeIn().delay(10000).fadeOut();#}
-{#                    return false;#}
-{#                }#}
-{#                if (phone.charAt(0) == 6 && phone.length == 9) $(this).find('.phone').val('237' + phone)#}
-{#            })#}
+            }).blur(function() {
+                var username = $(this).val().replace(/ /g, '');
+                $(this).val(username);
+            });
         })()
     </script>
     {{ config.scripts|safe }}
