--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -33,8 +33,8 @@ body {color: #545454}
 .cta {font-family: "PT Sans", Lato, sans-serif;font-weight: 700;letter-spacing: 0.5px;text-transform: uppercase;}
 .stretched {height: 100%; width: 100%}
 .errorlist {color: #e74c3c}
-#content .errorlist.phone {padding-left: 18px}
-#content .errorlist.phone li {list-style-type: disc}
+#content .errorlist.username, #content .errorlist.phone {padding-left: 18px}
+#content .errorlist.username li, #content .errorlist.phone li {list-style-type: disc}
 
 .spinner-container {-webkit-animation: rotate 2s linear infinite; animation: rotate 2s linear infinite; z-index: 2}
 .spinner-container .path {
@@ -72,7 +72,7 @@ body {color: #545454}
 .status-bullet.success {background: #2ab732}
 .status-bullet.danger, .status-bullet.canceled, .status-bullet.rejected {background: #ee4032}
 
-.member, .ik-li {border-bottom: 1px solid #eee;display: block;float: left;padding: 10px;width: 100%;transition: border .1s;}
+.member, .ik-li {background: #fff; border-bottom: 1px solid #eee;display: block;float: left;padding: 10px;width: 100%;transition: border .1s;}
 .ik-li.clearfix {border-bottom: none}
 .member:hover, .ik-li:hover {background: #f8f8f8}
 .member.active, .ik-li.active {background: #f8f6f6;}
@@ -103,7 +103,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 
 .tiles {margin-top: -15px}
 .tiles .ik-li {height: 280px;width: 100%;border-bottom: none;}
-.tiles .ik-li > .content {border: 1px solid #eee; padding: 6px}
+.tiles .ik-li > .content {background: #fff;border: 1px solid #eee;padding: 6px;}
 .tiles .ik-li .image {background-size: cover}
 .tiles .ik-li.selected {border: none}
 .tiles .ik-li.selected .content {border: 3px solid #9433ff}
@@ -173,7 +173,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 #site-menu {background: #2c3e50;padding: 0;}
 .glyphicon + .label {margin: -15px 0 0 12px;position: absolute;}
 
-#content {padding: 55px 0 0}
+#content {padding: 55px 0 0;}
 #content.form {padding-top: 15%;}
 #content.form > div {margin: auto}
 #content.form .directions {font-size: 16px; margin-top: 90px; text-align: center}
@@ -311,9 +311,15 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
     }
 }
 
-footer {color: #999;font-size: 12px;text-align: center;margin-top: 30px;}
+footer {color: #999;font-size: 12px;text-align: center;margin: 30px;}
 .edge-panel-left footer {margin-top: 0}
 footer a {color: #999}
+footer .company-name {color: #666; text-decoration: none}
+
+.error-page {background: #111 url(../../ikwen/img/colorful-bg.jpg) center fixed; background-size: cover; color: #fff; padding-top: 10%}
+.error-page #content {padding-left: 15px; padding-right: 15px}
+.error-page h1 {font-size: 4em;}
+.error-page footer, .error-page footer a {color: #fff}
 
 .item-preview {background: #f6f6f6;border-radius: 5px;overflow: hidden;margin-top: 5px;}
 .item-preview .img {background: no-repeat center;background-size: cover;float: left;height: 100px;width: 100px;}
