--- a/accesscontrol/templates/accesscontrol/mails/password_reset_instructions.html
+++ b/accesscontrol/templates/accesscontrol/mails/password_reset_instructions.html
@@ -3,7 +3,12 @@
 
 {% block content %}
     <p style="color: #888; font-size: 1.35em; line-height: 1.44em; margin-top: 45px; min-height: 180px; padding: 0 15px; text-align: justify">
-        {% trans "Someone asked for password reset for email" %} {{ member.email }}. {% trans "Follow the link below" %}:<br/><br/>
-        {{ protocol }}://{{ domain }}{% url 'ikwen:set_new_password' uidb64=uid token=token %}
+        {% trans "Hello" %} {{ member.first_name }},
+        {% trans "You asked a password reset for email" %} {{ member.email }}. {% trans "Click the button below" %}:<br/><br/>
+        <a href="{{ protocol }}://{{ domain }}{% url 'ikwen:set_new_password' uidb64=uid token=token %}" target="_blank"
+           style="background: #16991D; border-radius: 3px; clear: both; color: #fff; display: block; font-size: 1.35em; font-weight: bold; margin: 20px auto; padding: 12px 45px; text-align: center; text-decoration: none; text-transform: uppercase; width: 200px">
+            {% trans "Reset password" %}
+        </a>
+        <br><br><br>
     </p>
 {% endblock %}
