--- a/flatpages/templates/flatpages/flatpage_list.html
+++ b/flatpages/templates/flatpages/flatpage_list.html
@@ -27,12 +27,12 @@
                     {% for page in flatpage_list %}
                         {% url 'ikwen:change_flatpage' page.id as flatpage_url %}
                         <li class="list-group-item ik-li" id="{{ page.id }}" data-id="{{ page.id }}">
-                            <div class="select subtle-shade">
-                                <i class="glyphicon glyphicon-ok"></i>
-                            </div>
-                            <a href="{{ flatpage_url|append_auth_tokens:request }}">{{ page.title }}</a>
+{#                            <div class="select subtle-shade">#}
+{#                                <i class="glyphicon glyphicon-ok"></i>#}
+{#                            </div>#}
+                            <a href="{{ flatpage_url }}">{{ page.title }}</a>
                             <div class="actions">
-                                <i class="action icon trash" title="{% trans "Delete item" %}"></i>
+                                <i class="glyphicon glyphicon-trash trash" title="{% trans "Delete item" %}"></i>
                             </div>
                         </li>
                     {% endfor %}
