Cancels default action on #context-search and overrides it by the one defined in the page.

--- a/accesscontrol/templates/accesscontrol/community.html
+++ b/accesscontrol/templates/accesscontrol/community.html
@@ -310,7 +310,8 @@
                 $('div#object-detail .empty').show();
                 $('div#object-detail .actions').hide();
             }
-            ikwen.setupSearch('#context-search input', '#results', searchDescriptor, beforeSearch);
+            $('#context-search').unbind();
+            ikwen.setupSearch('#context-search', '#results', searchDescriptor, beforeSearch);
         })()
     </script>
 {% endblock %}
